Fixed some layout issues and changed home page

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -6,6 +6,8 @@
   --background-light:#fff;
   --text_light: #FFF;
   --header-text_light: #411470;
+  --primary_dark: #411470;
+
 }
 
 body {
@@ -51,7 +53,7 @@ nav a {
 }
 
 main {
-  width:960px;
+  max-width:960px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -62,8 +64,35 @@ main {
   justify-content: space-between;
 }
 
+.answerButtons button {
+  background-color: var(--primary_dark);
+  color: var(--text_light);
+  font-size: 1rem;
+  font-weight: 400;
+  padding: .5em;
+  border-radius: 10px;
+  border: none;
+}
+
+.answerButtons button:hover {
+  box-shadow: 3px 3px 2px 1px #aaa;
+  cursor: pointer;
+}
+
 .nextPrevButtons{
   display: flex;
   gap: 2em;
   margin-top:2em;
+}
+
+.nextPrevButtons button {
+  background-color: var(--primary_dark);
+  color: var(--text_light);
+  padding: .5em;
+  border-radius: 10px;
+}
+
+.nextPrevButtons button:hover {
+  box-shadow: 3px 3px 2px 1px #aaa;
+  cursor: pointer;
 }
